// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HorizontalCard1 should render is-read correctly 1`] = `
<div>
  <article
    class="horizontalCard1 isRead"
    id="1"
  >
    <a
      aria-label="This is the title"
      href="https://example.com/1/This is the title"
    >
      <figure>
        <picture>
          <img
            alt="This is the title"
            src="https://images.example.com/image.png"
          />
        </picture>
        <figcaption
          class="body-text sans xs"
        />
      </figure>
      <div
        class="teaserText"
      >
        <div
          class="meta"
        >
          <span
            class="prefix body-text sans bold xs"
          >
            Ondernemen
          </span>
          <time
            class="body-text sans bold xs"
          >
            11:40
          </time>
        </div>
        <div
          class="textContainer"
        >
          <h1
            class="heading sans s"
          >
            This is the title
          </h1>
        </div>
      </div>
    </a>
  </article>
</div>
`;

exports[`HorizontalCard1 should render variant-1 correctly 1`] = `
<div>
  <article
    class="horizontalCard1 longread"
    id="1"
  >
    <a
      aria-label="This is the title"
      href="https://example.com/1/This is the title"
    >
      <figure>
        <picture>
          <img
            alt="This is the title"
            src="https://images.example.com/image.png"
          />
        </picture>
        <figcaption
          class="body-text sans xs"
        />
      </figure>
      <div
        class="teaserText"
      >
        <div
          class="meta"
        >
          <span
            class="prefix body-text sans bold xs"
          >
            Ondernemen
          </span>
          <time
            class="body-text sans bold xs"
          >
            11:40
          </time>
        </div>
        <div
          class="textContainer"
        >
          <h1
            class="heading sans s"
          >
            This is the title
          </h1>
        </div>
      </div>
    </a>
  </article>
</div>
`;
